--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-on-screen": "^2.1.1",
     "react-paginate": "^8.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
